name:                tinymap
version:             0.1.0.0
synopsis:            tinymap is a wrapper around a strict hashmap that serializes and compresses values all while maintaing Ord instances on keys for fast lookup and insertion
description:         A purely functional, space-efficient, strict hash map with good asymptotics
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10
library
  exposed-modules:     Data.TinyMap
  build-depends:       base >=4.7 && <4.8
                     , unordered-containers
                     , binary
                     , zlib
                     , cereal
                     , hashable
                     , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
  